[gd_scene load_steps=11 format=3 uid="uid://c306serbre1od"]

[ext_resource type="Script" path="res://scripts/Profile.gd" id="1_7rvnp"]
[ext_resource type="Texture2D" uid="uid://36y5jyy0xw54" path="res://Demo Art/Sprout Lands - UI Pack - Basic pack/Sprite sheets/Setting menu.png" id="1_ehxpl"]
[ext_resource type="FontFile" uid="uid://l0h7op10aboy" path="res://Demo Art/Sprout Lands - UI Pack - Basic pack/fonts/pixelFont-7-8x14-sproutLands.ttf" id="3_i7uxy"]
[ext_resource type="PackedScene" uid="uid://clllbf6am8qdf" path="res://addons/silent_wolf/common/SWButton.tscn" id="4_x5rcg"]
[ext_resource type="Theme" uid="uid://bfn6c6vx2cakq" path="res://Themes/GUI_THEME.tres" id="5_hfpq0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_c8ecn"]
atlas = ExtResource("1_ehxpl")
region = Rect2(139, 12, 106, 122)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_63x0e"]
texture = SubResource("AtlasTexture_c8ecn")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e85q7"]
bg_color = Color(0.116127, 0.116127, 0.116127, 0.588235)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0spc1"]
bg_color = Color(0.488522, 0.411179, 0.31263, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_grjna"]
bg_color = Color(0.190001, 0.152994, 0.105644, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[node name="Control" type="Panel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -248.0
offset_top = -273.0
offset_right = 252.0
offset_bottom = 277.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_63x0e")
script = ExtResource("1_7rvnp")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 142.0
offset_top = 39.0
offset_right = 345.0
offset_bottom = 84.0
theme_override_fonts/font = ExtResource("3_i7uxy")
theme_override_font_sizes/font_size = 53
text = "PROFILE
"

[node name="username" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -177.0
offset_top = -107.0
offset_right = 179.0
offset_bottom = -56.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("3_i7uxy")
theme_override_font_sizes/font_size = 60
text = "name of user"

[node name="tutorial" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 85.0
offset_top = -11.0
offset_right = 255.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("3_i7uxy")
theme_override_font_sizes/font_size = 36
text = "12"

[node name="challenge" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 87.0
offset_top = 31.0
offset_right = 258.0
offset_bottom = 62.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("3_i7uxy")
theme_override_font_sizes/font_size = 36
text = "12"

[node name="scores" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 170.0
offset_top = -21.0
offset_right = 420.0
offset_bottom = 205.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_e85q7")

[node name="Label" type="Label" parent="scores"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -111.0
offset_top = -104.0
offset_right = 111.0
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_i7uxy")
theme_override_font_sizes/font_size = 18

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 36.0
offset_top = 121.0
offset_right = 208.0
offset_bottom = 156.0
theme_override_fonts/font = ExtResource("3_i7uxy")
theme_override_font_sizes/font_size = 36
text = "Username:"

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 29.0
offset_top = 265.0
offset_right = 284.0
offset_bottom = 300.0
theme_override_fonts/font = ExtResource("3_i7uxy")
theme_override_font_sizes/font_size = 36
text = "Tutorial Status:"

[node name="Label4" type="Label" parent="."]
layout_mode = 0
offset_left = 35.0
offset_top = 306.0
offset_right = 290.0
offset_bottom = 341.0
theme_override_fonts/font = ExtResource("3_i7uxy")
theme_override_font_sizes/font_size = 36
text = "Game Status:"

[node name="Label5" type="Label" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 356.0
offset_right = 287.0
offset_bottom = 391.0
theme_override_fonts/font = ExtResource("3_i7uxy")
theme_override_font_sizes/font_size = 36
text = "Best scores: "

[node name="CloseButton" parent="." instance=ExtResource("4_x5rcg")]
layout_mode = 0
offset_left = 85.0
offset_top = 438.0
offset_right = 385.0
offset_bottom = 493.0
theme = ExtResource("5_hfpq0")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_i7uxy")
theme_override_font_sizes/font_size = 36
text = "Close Profile
"

[node name="scores_display" type="Button" parent="."]
layout_mode = 0
offset_left = 290.0
offset_top = 348.0
offset_right = 365.0
offset_bottom = 388.0
theme_override_fonts/font = ExtResource("3_i7uxy")
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_0spc1")
theme_override_styles/hover = SubResource("StyleBoxFlat_grjna")
text = "Show Scores"

[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="mouse_entered" from="scores_display" to="." method="_on_scores_display_mouse_entered"]
[connection signal="mouse_exited" from="scores_display" to="." method="_on_scores_display_mouse_exited"]
[connection signal="toggled" from="scores_display" to="." method="_on_scores_display_toggled"]
